bug 819902 - system settings pac file failed redirect r=biesi